--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My favorites colors</title>
+    <style>
+      .rectangle {
+        margin: 10px;
+        width: 100px;
+        height: 100px;
+      }
+    </style>
   </head>
-  <body></body>
-  <script src="loops.js"></script>
+  <body>
+    <h1>My favorites colors</h1>
+    <h2>Displays my favorites colors</h2>
+    <div id="rectangleWrapper">
+      <div class="rectangle" id="1"></div>
+      <div class="rectangle" id="2"></div>
+      <div class="rectangle" id="3"></div>
+      <div class="rectangle" id="4"></div>
+      <div class="rectangle" id="5"></div>
+      <div class="rectangle" id="6"></div>
+      <div class="rectangle" id="7"></div>
+      <div class="rectangle" id="8"></div>
+      <div class="rectangle" id="9"></div>
+      <div class="rectangle" id="10"></div>
+    </div>
+  </body>
+  <script src="dom.js"></script>
 </html>
