--- a/project-1.html
+++ b/project-1.html
@@ -5,15 +5,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="project-1.css" />
   </head>
-  <body>
-    <header><h1 class="header">TO DO LIST</h1></header>
-    <div id="wrap">
-    <div id="content">
-      <h2 class="header">Check what you do <span class="simbol">&#x2714</span></h2>
-      <button id="signUpButton" class="button" name="singUp">Sign Up</button>
-      <button id="LogInButton" class="button" name="Login">Log In</button>
-    </div>
-    </div>
+  <body id="body">
+      
   </body>
   <script src="project-1.js"></script>
 </html>
