--- a/project-1.html
+++ b/project-1.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Document</title>
-    <link rel="stylesheet" href="project-1.css" />
-  </head>
-  <body id="body">
-      
-  </body>
+<html lang="en" id="html">
+  <body id="body"></body>
   <script src="project-1.js"></script>
 </html>
