--- a/vue/vue.html
+++ b/vue/vue.html
@@ -10,36 +10,11 @@
   <body>
     <div id="app">
       <div class="header">
-        <h1>{{description}}</h1>
-        <div class="message">{{message}}</div>
+        <h1>VUE FIRST EXAPMLE</h1>
+        <div class="message">Learngin is fun</div>
       </div>
-      <div class="body">
-        <div class="image"><img v-bind:src="image" /><br /></div>
-        <div class="information">
-          <a v-bind:href="link">OPEN CSS FILE</a>
-          <p v-if="grass">GRASS</p>
-          <p v-else>SKY</p>
-          <ul>
-            <li v-for="size in sizes">{{size}}</li>
-          </ul>
-          <div
-            v-for="color in colors"
-            :key="colors.id"
-            :style="{backgroundColor: color.color}"
-            class="types-of-images"
-            @mouseover="changeColor(color.image)"
-          ></div>
-          <button
-            class="button"
-            @click="incrementCoutner"
-            :disabled="times > 9"
-            :class="{'disabled-button': disabled}"
-          >
-            Increment Button
-          </button>
-          <p>counter: {{times}}</p>
-        </div>
-      </div>
+      <sky></sky>
+      <list :sizes="sizes"></list>
     </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
